@@ -348,6 +348,9 @@ Unreleased changes (1.0-dev)
 
 130. NUTCH-563 - Include custom fields in BasicQueryFilter
      (Julien Nioche via siren)
+     
+131. NUTCH-695 - incorrect mime type detection by MoreIndexingFilter plugin
+     (Dmitry Lihachev via siren)
 
 Release 0.9 - 2007-04-02
 
